feat: Enhance linting, formatting, and PWA documentation
This commit introduces several improvements across linting, code formatting, and documentation, with a focus on Progressive Web App (PWA) capabilities.

**Linting and Code Formatting:**

-   Added `custom_lint` and `memverse_lints` dependencies for enforcing code standards.
-   Implemented custom lint rules in the `memverse_lints` package to prevent direct `debugPrint` and `log` calls, promoting the use of `AppLogger`.
-   Added a quick fix for the new custom lint rules to automatically convert code to use `AppLogger`
-   Created a test file to check detection of the new custom lint rules
-   Added a script `fix_generated_localizations.sh` to the project that addresses trailing comma issues in the `app_localizations.dart` file, which was causing problems with `dart format`.
-   Updated the GitHub workflow to run this script before format checking.
-   Modified `analysis_options.yaml` to exclude the generated localization file from analysis and added custom lint rules configuration.
- Updated `cspell.json` with extra vocabulary

**Documentation:**

-   Created comprehensive PWA documentation, including:
    -   `pwa_user.md`: A user-friendly guide for installing Memverse as a PWA.
    -   `pwa_technical.md`: Technical details about the PWA implementation and Netlify integration.
    -   `demo_pwa.md`: Instructions for creating demo videos of the PWA installation process.
-   Created `questions-L1.md` and `questions-L2.md`, containing beginner and advanced questions about the codebase.
- Created a `summary.md` to summarize completed work

**Other Changes:**

-   Updated `analyzer` and `analyzer_plugin` dependencies.
-   Updated test files to be more robust, with more descriptive tags.
-   Added logic to the custom lint rules to automatically add the import for AppLogger when required.
- Addressed minor issues in test files and other dart files.
- Updated the AI prompt log.
- Fixed dependency issues when testing 

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,9 +54,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # something wrong with trailing commas in the localization file, leave this alone for now
-      #   - name: Check formatting
-      #     run: dart format --output=none --set-exit-if-changed . -l 100 # Match line length
+      - name: Fix generated localization files
+        run: ./scripts/fix_generated_localizations.sh
+
+      - name: Check formatting
+        run: dart format --output=none --set-exit-if-changed . -l 100 # Match line length
 
       - name: Analyze project
         run: flutter analyze
