--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,4 +10,17 @@ linter:
     public_member_api_docs: false
     lines_longer_than_80_chars: false
     eol_at_end_of_file: false
-    require_trailing_commas: false
+    require_trailing_commas: true
+
+# Add specific ignores for generated files
+analyzer:
+  exclude:
+    - lib/l10n/arb/app_localizations.dart
+  plugins:
+    - custom_lint
+
+# Configure custom lint rules
+custom_lint:
+  rules:
+    - avoid_debug_print
+    - avoid_log
