Refactor logging checks to Python, improve pipeline efficiency, and remove custom lint package
- Removes the custom lint package and adds a Jira ticket reference.
- Moves `log()` and `debugPrint` checks to the top of the pipeline for faster failure detection.
- Refactors the logging standards check, creating a shared helper script (`scripts/check_logging_standards.py`) to improve code sharing and consistency between pipeline and local script.
- Updates the CI workflow and `check_before_commit.sh` to use the new helper.
- Enhances the `grep` pattern with word boundaries and comment filtering.
- Expands scanning to include both `lib/` and `test/` directories.
- Ensures compatibility with local and CI environments.
- Adds test coverage for the `check_logging_standards` script, converting it to Python.
- Updates the `check_before_commit` script for autofixes and change reporting, while the CI pipeline fails instead of autofixing.
- Removes testing log statements.
- Adds test cases that serve as documentation and examples.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,7 +10,7 @@ linter:
     public_member_api_docs: false
     lines_longer_than_80_chars: false
     eol_at_end_of_file: false
-    require_trailing_commas: true
+    require_trailing_commas: false
 
 # Add specific ignores for generated files
 analyzer:
