--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -2,7 +2,7 @@
   "name": "netlify-functions",
   "version": "1.0.0",
   "description": "Netlify serverless functions for CORS handling",
-  "main": "cors-proxy.js",
+  "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
