MEM-102 Cors proxy and web depoy as well as MEM-112 log wrapper enforcement (#26)
* feat: Implement Netlify proxy for API requests and update dependencies

This commit introduces a Netlify proxy to handle API requests, addressing CORS issues for web deployments. It includes the following:

-   **Netlify Proxy Implementation**:
    -   Adds `netlify.toml` for configuring Netlify's build process, function directory, and redirect rules.
    -   Creates `netlify/functions/api.js` as a serverless Node.js function to act as an API proxy, forwarding requests and managing CORS headers.
    -   Includes `netlify/functions/package.json` to manage dependencies for the Netlify function.
-   **Updated Dart Code**:
    -   Introduces `api_constants.dart` with `apiBaseUrl` and `webApiPrefix` for API URL management.
    -   Modifies `verse_repository.dart` and `auth_service.dart` to use the Netlify proxy for web requests and direct API calls otherwise.
-   **CORS Handling**:
    -   Sets up the `api.js` function to handle CORS by adding `Access-Control-Allow-Origin` and other necessary headers to responses.
-   **Documentation**:
    -   Adds `netlify_deploy.md` which explains the Netlify CORS proxy setup, CORS, TOML and Netlify.
- **Other changes**:
    -   Skip golden tests for now.
    -   Adds `netlify/functions/node_modules/` and `.netlify/` to `.gitignore`.
    -   Updates `localizationsDelegates` and `supportedLocales` in `app_localizations.dart`.
    -   Migrates from `node-fetch` to `axios` in `package.json` for better reliability.

* Cache Flutter SDK version 3.29.3 for faster builds

This commit modifies the build process to cache a specific Flutter SDK version (3.29.3) in the `FLUTTER_DIR`. It checks if the cached version exists and matches the desired version. If it does, it uses the cached version. If not, it clones the specified version from the Flutter repository. After either using the cached version or cloning a new version, it precaches artifacts for web and Linu

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,9 +54,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # something wrong with trailing commas in the localization file, leave this alone for now
-      #   - name: Check formatting
-      #     run: dart format --output=none --set-exit-if-changed . -l 100 # Match line length
+      - name: Format generated localization files
+        run: dart format lib/l10n/arb/app_localizations*.dart -l 100
 
       - name: Analyze project
         run: flutter analyze
@@ -184,6 +183,51 @@ jobs:
         with:
           name: integration-test-coverage
           path: coverage/integration_html
+
+  format-check:
+    name: Format Check
+    needs: extract-config
+    runs-on: ubuntu-latest
+    continue-on-error: true  # This ensures the job doesn't block other tasks
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ needs.extract-config.outputs.flutter_version }}
+          cache: true
+
+      - name: Check formatting
+        run: |
+          echo "Running targeted format fixes on app_localizations files first"
+          # Apply direct formatting to app_localizations files
+          dart format lib/l10n/arb/app_localizations*.dart -l 100
+          
+          # Verify specifically that app_localizations files are properly formatted
+          echo "Verifying app_localizations format"
+          dart format --output=none --set-exit-if-changed lib/l10n/arb/app_localizations*.dart -l 100
+          
+          # Now run general format check
+          echo "Running general format check (non-blocking)"
+          dart format --output=none --set-exit-if-changed . -l 100 || echo "⚠️ Formatting issues detected, but continuing pipeline"
+          
+          # If there were formatting issues, show the diff
+          if [ $? -ne 0 ]; then
+            echo "Showing format differences (for informational purposes):"
+            dart format --output=show . -l 100 || true
+          fi
+
+  check-logging-standards:
+    name: Check Logging Standards
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check for prohibited logging methods
+        run: |
+          chmod +x ./scripts/check_logging_standards.py
+          python3 ./scripts/check_logging_standards.py --mode ci
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
