--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,3 +11,8 @@ linter:
     lines_longer_than_80_chars: false
     eol_at_end_of_file: false
     require_trailing_commas: false
+
+# Add specific ignores for generated files
+analyzer:
+  exclude:
+    - lib/l10n/arb/app_localizations.dart
