--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.1.2+60.e68da18
 publish_to: none
 
 environment:
-  sdk: 3.7.2
-  flutter: 3.29.3 # Needs to match FLUTTER_VERSION in scripts/project_config.sh
+  sdk: '>=3.7.2 <4.0.0'
+  flutter: ">=3.16.8"
 
 dependencies:
   dio: 5.8.0+1
@@ -20,7 +20,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   hooks_riverpod: ^2.6.1
   http: 1.4.0
-  intl: 0.19.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   logger: 2.5.0
   path_provider: 2.1.5
