--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 command = """
-    FLUTTER_VERSION="3.29.3" # Specify Flutter 3.29.3
+    FLUTTER_VERSION="3.32.0"
     curl -fSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${FLUTTER_VERSION}-stable.tar.xz -o flutter.tar.xz
     tar xf flutter.tar.xz
     export PATH="$PWD/flutter/bin:$PATH"
