--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.1.2+60.e68da18
 publish_to: none
 
 environment:
-  sdk: '>=3.7.2 <4.0.0'
-  flutter: ">=3.16.8"
+  sdk: '>=3.8.0 <4.0.0'
+  flutter: "3.32.0"
 
 dependencies:
   dio: 5.8.0+1
