--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   json_annotation: ^4.9.0
   logger: 2.5.0
   path_provider: 2.1.5
+  posthog_flutter: ^5.0.0
   riverpod_annotation: 2.6.1
   share_plus: 11.0.0
 
