DUMMY Signup screen (#48)
* feat(signup): Implement dummy signup with comprehensive testing

This commit introduces a dummy signup implementation for "dummynewuser@dummy.com", allowing users to test the signup flow without requiring an internet connection or real API integration.

Key changes include:

- **Dummy Signup UI**: A new `SignupPage` with form validation, loading states, success screen, and auto-redirect to the main app.
- **Fake JSON Data Pattern**: Implemented `FakeAuthData` and `FakeUserRepository` using JSON literals to simulate API responses, similar to Square's MockWebServer. This ensures realistic test data without external dependencies.
- **Comprehensive Testing Suite**: Added four types of tests for the dummy signup flow:
    - **Maestro Test**: `maestro/flows/signup_happy_path.yaml` covers the end-to-end UI flow.
    - **Widget Tests**: `test/features/auth/signup_page_test.dart` ensures UI components behave correctly.
    - **Integration Tests**: `integration_test/signup_dummy_integration_test.dart` verifies the full signup flow within the app context.
    - **BDD Widget Tests**: `test/features/signup_dummy.feature` and `test/step/signup_steps.dart` define behavior-driven scenarios.
- **Domain Models**: Introduced `User` domain model and `UserRepository` interface.
- **Documentation**:
    - `charlatan_vs_mockdio_analysis.md`: Compares Charlatan with the chosen fake JSON pattern.
    - `plan_of_attack.md`, `MEM-160_ai_prompts.log`, `MEM_160_session_summary.md`, `MEM-160_resume_session_prompt.md`: Document the development process and decision-making.
    - `temporarily_ditl.md`: Updated Day-In-The-Life progress tracker.
- **Login Page Update**: Added a "Sign Up" link to `LoginPage` to navigate to the new `SignupPage`.

This setup provides a robust foundation for testing the signup feature and ensures high test coverage across different testing methodologies. The fake JSON pattern was chosen for its alignment with existing codebase practices, nativ

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   json_annotation: ^4.9.0
   logger: 2.6.0
   path_provider: 2.1.5
-  posthog_flutter: ^5.0.0
+  posthog_flutter: 5.0.0
   riverpod_annotation: 2.6.1
   share_plus: 11.0.0
 
@@ -37,8 +37,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   json_serializable: ^6.9.5
-  mockito: ^5.4.5
-  mocktail: 1.0.4
+  mocktail: ^1.0.4
   network_image_mock: ^2.1.1
   path_provider_platform_interface: ^2.1.2
   patrol: ^3.17.0
@@ -48,6 +47,7 @@ dev_dependencies:
   test_api: any
   very_good_analysis: 9.0.0
 
+  mockito: any
 scripts:
   test: flutter test
   test_coverage: flutter test --coverage
