--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   dio: 5.8.0+1
+  dio_curl_logger: ^1.1.0
   feedback: 3.1.0
   flutter:
     sdk: flutter
@@ -18,6 +19,7 @@ dependencies:
   flutter_riverpod: 2.6.1
   flutter_secure_storage: 9.2.4
   freezed_annotation: ^3.1.0
+  go_router: ^7.1.1
   hooks_riverpod: ^2.6.1
   http: 1.4.0
   intl: ^0.20.2
