Fix(netlify.toml): Ensure correct environment variables and main entry point are used for production build
The `netlify.toml` configuration for building the web application was updated.

The build command now uses:
- `--flavor=production` to specify the production build flavor.
- `--dart-define=MEMVERSE_CLIENT_API_KEY=$MEMVERSE_CLIENT_API_KEY` to include the Memverse client API key.
- `--target lib/main_production.dart` to use the correct main entry point for production builds.

The redundant `--dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID` was removed.

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@ command = """
     flutter config --enable-web
     flutter precache --web 
     flutter pub get 
-    flutter build web --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID  --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --dart-define=POSTHOG_MEMVERSE_API_KEY=$POSTHOG_MEMVERSE_API_KEY --target lib/main_development.dart
+    flutter build web --flavor=production --dart-define=MEMVERSE_CLIENT_API_KEY=$MEMVERSE_CLIENT_API_KEY --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --dart-define=POSTHOG_MEMVERSE_API_KEY=$POSTHOG_MEMVERSE_API_KEY --target lib/main_production.dart
   """
 publish = "build/web"
 
