--- a/netlify.toml
+++ b/netlify.toml
@@ -11,8 +11,12 @@ command = """
     # Continue with the Flutter build
     flutter config --enable-web
     flutter precache --web 
-    flutter pub get 
-    flutter build web --flavor production --dart-define=MEMVERSE_CLIENT_API_KEY=$MEMVERSE_CLIENT_API_KEY --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --dart-define=POSTHOG_MEMVERSE_API_KEY=$POSTHOG_MEMVERSE_API_KEY --target lib/main_production.dart
+    flutter pub get
+    # Note: Web does not support flavor, we can do it via target or dart-define or both
+    # https://github.com/flutter/flutter/issues/59388
+    # web itself has no concept of flavors but 3 workarounds
+    # dart defines, sep targets, sep index.htmls etc
+    flutter build web --dart-define=MEMVERSE_CLIENT_API_KEY=$MEMVERSE_CLIENT_API_KEY --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --dart-define=POSTHOG_MEMVERSE_API_KEY=$POSTHOG_MEMVERSE_API_KEY --target lib/main_production.dart
   """
 publish = "build/web"
 
